Fixed letter spacing for h2

--- a/_sass/_ui.scss
+++ b/_sass/_ui.scss
@@ -80,7 +80,6 @@ h2 {
    margin: 0px 0px $base-line-height 0px;
    font-weight: 400;
    color: $header-color;
-   letter-spacing: $base-letter-spacing/2;
 	}
 
 p, li {
